--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "bootswatch": "^4.1.3",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "ua-parser-js": "^0.7.18",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.12",
     "vue-resource": "^1.5.1",
