--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -21,8 +21,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "xterm": "^3.6.0"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
