--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -73,3 +73,7 @@
 [[constraint]]
   name = "github.com/rs/zerolog"
   version = "1.8.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/grpc-ecosystem/go-grpc-middleware"
