--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -77,3 +77,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/grpc-ecosystem/go-grpc-middleware"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/felixge/httpsnoop"
