--- a/sandbox-image/Dockerfile
+++ b/sandbox-image/Dockerfile
@@ -1,12 +1,12 @@
 FROM ubuntu:18.04
 
 ENV container docker
-ENV DEBIAN_FRONTEND noninteractive
 
 RUN sed -i -E 's!archive.ubuntu.com!mirrors.aliyun.com!' /etc/apt/sources.list
 RUN sed -i -E 's!security.ubuntu.com!mirrors.aliyun.com!' /etc/apt/sources.list
 
-RUN apt-get update &&\
+RUN export DEBIAN_FRONTEND=noninteractive &&\
+    apt-get update &&\
     apt-get install -y apt-utils &&\
     apt-get upgrade -yy &&\
     apt-get install -y openssh-client git vim htop tmux bash-completion build-essential iputils-ping &&\
