--- a/sandbox-image/Dockerfile
+++ b/sandbox-image/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /root
 ADD dummy-init /usr/bin
 ADD etc/bash_completion.d/bastion_ssh_config /etc/bash_completion.d
 
+ENV LC_ALL=zh_CN.UTF-8
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
