--- a/sandbox-image/Dockerfile
+++ b/sandbox-image/Dockerfile
@@ -5,11 +5,11 @@ ENV container docker
 RUN sed -i -E 's!archive.ubuntu.com!mirrors.aliyun.com!' /etc/apt/sources.list
 RUN sed -i -E 's!security.ubuntu.com!mirrors.aliyun.com!' /etc/apt/sources.list
 
-RUN export DEBIAN_FRONTEND=noninteractive &&\
-    apt-get update &&\
-    apt-get install -y apt-utils &&\
-    apt-get upgrade -yy &&\
-    apt-get install -y openssh-client git vim htop tmux bash-completion build-essential iputils-ping tzdata dialog language-pack-zh-hans python python-pip libmysqlclient-dev openjdk-8-jdk php7.2 php7.2-mysql mysql-client &&\
+RUN export DEBIAN_FRONTEND=noninteractive && \
+    apt-get update && \
+    apt-get install -y apt-utils && \
+    apt-get upgrade -yy && \
+    apt-get install -y openssh-client git vim htop tmux bash-completion build-essential iputils-ping tzdata dialog language-pack-zh-hans python python-pip libmysqlclient-dev openjdk-8-jdk php7.2 php7.2-mysql mysql-client redis-tools && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root
