--- a/sandbox-image/Dockerfile
+++ b/sandbox-image/Dockerfile
@@ -9,7 +9,10 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
     apt-get install -y apt-utils && \
     apt-get upgrade -yy && \
-    apt-get install -y openssh-client git vim htop tmux bash-completion build-essential iputils-ping tzdata dialog language-pack-zh-hans python python-pip libmysqlclient-dev openjdk-8-jdk php7.2 php7.2-mysql mysql-client redis-tools && \
+    apt-get install -y openssh-client git vim htop tmux bash-completion build-essential \
+    iputils-ping tzdata dialog language-pack-zh-hans python python-pip libmysqlclient-dev \
+    openjdk-8-jdk php7.2 php7.2-mysql mysql-client redis-tools curl lrzsz && \
+    pip install mysqlclient==1.3.7 MySql-python==1.2.5 torndb xlrd && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root
