--- a/sandbox-image/Dockerfile
+++ b/sandbox-image/Dockerfile
@@ -19,7 +19,8 @@ WORKDIR /root
 
 ADD dummy-init /usr/bin
 ADD etc/bash_completion.d/bastion_ssh_config /etc/bash_completion.d
-ADD etc/profile.d/common-bashrc.sh /etc/profile.d
+RUN printf "\nif [ -f /shared/common/bashrc ]; then\n  . /shared/common/bashrc\n  fi" >> /etc/bash.bashrc
+
 
 ENV LC_ALL=zh_CN.UTF-8
 ENV TZ=Asia/Shanghai
